# Study

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: chat_message.h.207503890A936E68.idx  main.cc.1719B1D99E40F593.idx  main.cc.4085D54238C89163.idx  main.cxx.05A637C59C45C2C0.idx
studies/: CMakeLists.txt
studies/boost_asio_chat/: CMakeLists.txt  chat_message.h
studies/boost_asio_chat/chat_client/: CMakeLists.txt  main.cc
studies/boost_asio_chat/chat_client_coroutine/: CMakeLists.txt
studies/boost_asio_chat/chat_server/: CMakeLists.txt  main.cc
studies/boost_asio_chat/chat_server_coroutine/: CMakeLists.txt  main.cc
studies/qml_tutorial/QmlStudy/: CMakeLists.txt  Main.qml
studies/qml_tutorial/qml_first_step_example/: CMakeLists.txt  main.cpp
studies/qml_tutorial/qml_first_step_example/qml_example_handle_input/: CMakeLists.txt  Main.qml  main.cpp
studies/qml_tutorial/qml_first_step_example/qml_with_controls_example/: Main.qml
studies/qml_tutorial/qml_hello_world_example/: Main.qml  main.cpp
tests/: CMakeLists.txt
tests/Protobuf/: CMakeLists.txt  main.cxx
tests/Protobuf/proto/: person.proto
